start work with system

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -2,17 +2,24 @@ include_directories(${GLUT_INCLUDE_DIR})
 add_definitions(-DGLUT_FOUND -DGLUT_NO_LIB_PRAGMA)
 
 add_sample_executable(Renderer 
-    main.cpp
-    path_tracer.cu
-    photon_map.cu
-    optixPathTracer.h
-	
 	CommonInclude.h
-	GlutEvent.h
+	VDebug.h
+
+    main.cpp
+
+    DataBridge.h
+
 	OptiXLayer.h
 	OptiXLayer.cpp
-	VDebug.h
+	
+	GlutEvent.h
 	GUI.hpp
+
+	Support/Material.h
+	Support/Material.cpp
+
+	Support/Basic.h
+	Support/Basic.cpp
 )
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
